# ChangeLog for sys-apps/calculate-client
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  02 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calculate-client-2.2.9999.ebuild:
  Add calculate-lib depend to live ebuild.

  02 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calculate-client-2.2.9999.ebuild:
  Fix executing install/unistall command.

*calculate-client-2.2.9999 (01 Jun 2010)

  01 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-client-2.2.9999.ebuild:
  Added live ebuild for calculate-client 2.2

*calculate-client-2.1.18 (28 May 2010)

  28 May 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-client-2.1.18.ebuild:
  Bump version. Calculate-2.1.18 bugfix release.

*calculate-client-2.1.17-r2 (19 May 2010)

  19 May 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calculate-client-2.1.17-r1.ebuild, +calculate-client-2.1.17-r2.ebuild,
  +files/calculate-client-2.1.17-r1.patch,
  +files/calculate-client-2.1.17-r2.patch,
  -files/calculate-client-2.1.17.patch:
  Add patch for the correct profile synchronization

  04 May 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calculate-client-9999.ebuild:
  Fix git path.

*calculate-client-2.1.17-r1 (04 May 2010)

  04 May 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-client-2.1.17.ebuild, +calculate-client-2.1.17-r1.ebuild,
  +files/calculate-client-2.1.17.patch:
  Add patch for bugfix #153.

*calculate-client-2.1.17 (20 Apr 2010)

  20 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-client-2.1.16.ebuild, +calculate-client-2.1.17.ebuild:
  Bump version. Remove previous.

*calculate-client-2.1.16 (16 Apr 2010)

  16 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-client-2.1.15.ebuild, +calculate-client-2.1.16.ebuild:
  Bump version. Remove previous.

  10 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>