@@ -7,7 +7,6 @@ EBUILD calculate-client-2.1.11.ebuild 1666 RMD160 1b9daee165695618b7404e51e58436
 EBUILD calculate-client-2.1.17-r1.ebuild 1809 RMD160 9b2e60c8b48807d86273fc9b78b1c8db4c79cea5 SHA1 4862fd10526862f7baa047d790f117787dcedc9a SHA256 b53f9a16678d4be95a23afef2cf0997f6567b38e936ec9590e3feeda66df45fc
 EBUILD calculate-client-2.1.17-r2.ebuild 1896 RMD160 01fb62dab724750b7514cb57353214a2d4f75337 SHA1 a43f4873532be1ca1edae47828fc22b0f164b88c SHA256 3da7be8962541bb447e667de5e3e2c67f06beda528b3282af4741a97265f6312
 EBUILD calculate-client-2.1.18.ebuild 1695 RMD160 91c6a5f07302640ad649824ed10d6495a724df58 SHA1 6e7c10b192a02f0daeb705d93585cd5db9fbff0d SHA256 ebc7776a3c62d3d37c6d36e02d78b1ceffea826229a213047371a6fde645f84f
-EBUILD calculate-client-2.2.9999.ebuild 1714 RMD160 72db559b504347ed0c219e1718f67da932c62027 SHA1 e7f978bbea19244e84a344e992b2dd208c90f125 SHA256 890343f8eec193bfc17f376ae812fcabf9316bb740c4ab9b4dfb8ca0bb7c3ae8
-EBUILD calculate-client-9999.ebuild 1640 RMD160 5d0dc794ef81d27de840059d84425d87d4d5c638 SHA1 5e1e90ac0c7d5ce26ff848212b28a0895ff901f3 SHA256 3484b1c3d6d5be7aef070468b07947be1ebcac829eeb1daf6041978e411757c3
-MISC ChangeLog 3929 RMD160 0a26e033bf9336fab1ae81c7c132d86d0efdea78 SHA1 5610207625367a8e68fa97ac9ab9261939eedf94 SHA256 22768b994a0fbe31baf3e741a709593e16236f29c737f2c45d1b4311e12e0505
+EBUILD calculate-client-2.2.9999.ebuild 1712 RMD160 122d6998eaf7a79ebefc7d9b163a78fd0c05fdd8 SHA1 e19444479c97d3c21064c09f731c67d80382ab66 SHA256 591e33e91632d9ef7d96c5c7bcecf82ef57af5e16b1ac61ee5eba3c9641522ee
+MISC ChangeLog 4076 RMD160 29d86a10b576d0c3927de63817ba423c1c708f83 SHA1 6579c13948387966ea5923e7edd94a00279f0f38 SHA256 17dfdc214b9a1375342838ed5f95007332ede7d7f575d68254d7c74eebdd3ecf
 MISC metadata.xml 310 RMD160 ed986dbc43c958bd57e0fb73749ee09167ee0221 SHA1 4007f716df1aa85ec65d926f246663effc382384 SHA256 5023605d36dcbb5d5fe1b1ac54f7125a4087479b5168601075a8050ed51c38c2
