@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  03 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  -calculate-client-9999.ebuild:
+  Removed live ebuild for calculate-client less 2.2.
+
   02 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
   calculate-client-2.2.9999.ebuild:
   Add calculate-lib depend to live ebuild.
